# ChangeLog for media-sound/jack-audio-connection-kit
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*jack-audio-connection-kit-0.124.1 (09 Apr 2015)

  09 Apr 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  -jack-audio-connection-kit-0.121.3.ebuild,
  -jack-audio-connection-kit-0.121.3-r1.ebuild,
  -jack-audio-connection-kit-0.121.3-r2.ebuild,
  +jack-audio-connection-kit-0.124.1.ebuild,
  jack-audio-connection-kit-1.9.10.ebuild,
  jack-audio-connection-kit-1.9999.ebuild,
  -jack-audio-connection-kit-1.9999-r1.ebuild,
  jack-audio-connection-kit-2.9999.ebuild,
  -files/jack-audio-connection-kit-0.121.3-respect-march.patch,
  -files/jack-audio-connection-kit-2.9999-link-fix.patch, metadata.xml:
  migrate to cpu_flags_x86_* (repoman payment)
  move to git-r3
  slot-depend where possible (repoman payment)
  drop blocker on old non-existing emul-linux-x86-soundlibs
  make ebuilds more similar to ease maintenance
  version bump to 0.124.1
  remove old ebuilds
  remove revisioned live ebuilds
  drop march patch
  remove old fix link patch
  jack1 fixes
    drop netjack use flag
    depend on sys-libs/db
    depend on readline insted of ncurses
    also depend on expat and PYTHON_DEPS if dbus enabled
    replace warning with REQUIRED_USE
    unconditionally pass --disable-mmx and --disable-sse since no conditional
     assembly is toggled
    use REQUIRED_USE for cpudetection
    never ever pass --enable-optimize
    install docs
  jack2 fixes
    PYTHON_REQ_USE="threads(+)" as required by waf-utils.eclass
    drop version specifiers for libsdnfile

*jack-audio-connection-kit-1.9.10 (26 Nov 2014)

  26 Nov 2014; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  -jack-audio-connection-kit-1.9.9.5-r1.ebuild,
  -jack-audio-connection-kit-1.9.9.5-r2.ebuild,
  +jack-audio-connection-kit-1.9.10.ebuild,
  jack-audio-connection-kit-2.9999.ebuild,
  -jack-audio-connection-kit-2.9999-r1.ebuild,