@@ -6,8 +6,8 @@ DIST jack-audio-connection-kit-0.121.3.tar.gz 1083545 SHA256 b7095d3deabeecd1977
 DIST jack-audio-connection-kit-0.124.1.tar.gz 1113456 SHA256 eb42df6065576f08feeeb60cb9355dce4eb53874534ad71534d7aa31bae561d6 SHA512 9c885da516f2ca246edba94db26c851229d063f1557ea91ec76ca57d675a510d16cc4baad5adb316cf46aaaa8b8d7579b484a53b9a803b34fc9bb34c983a8fe2 WHIRLPOOL 41232400d99a72b29a75f4d781c373a7f453c704a52b0a669cab71296574881b0a99b21b86628d02db8c3d7a64bec6a259ae1ba0a4c721867e19283139cee824
 EBUILD jack-audio-connection-kit-0.121.3-r2.ebuild 3239 SHA256 b953a066c094cdc9378883470d46fc36b2b06d11af30261b204976f539448f0c SHA512 e0d301d03cc46bfb7db58b8fe3ee8dffacdd752504c4067f3f7e0544d56d509ba4a8e99b7b136157790fe1f691e6187cf077581ad5bc5b00d47ed54c958fb33c WHIRLPOOL 5f7d9a6faf0193665e90ed01ed64d91eacedfb933bc8d80b637f80be47726834e3961e6eb03289da20ff70ba13f4bce8dbe4cf1ddfc53e96789eb48bd34c03eb
 EBUILD jack-audio-connection-kit-0.124.1.ebuild 3660 SHA256 059cd9a9a36a6cd7ece4456aa1e562c381158f1ff515f916189986d48c9d26a7 SHA512 15da72f324c50974a5d5ef1e22a99fc59f0ec6ed2ee8606682195af22bb4d19b6681f00ce7c8b466893d19aee2a3cf348fb94a40dff7a1f36eda2a16dc277f3c WHIRLPOOL 545ae26cfd2c25a7249e4a3647da1d1f003ebb2a79e3587f676e3d8f96d4e5b9820fc27c2ed2ea16522f28656376265a9c12ea5c51dbd20b8fa5aafba7f0f841
-EBUILD jack-audio-connection-kit-1.9.10.ebuild 2563 SHA256 74f9ba837d3bedc83303f7d92f47cade4b34ed83428556f6e6c8b721be6cb7c8 SHA512 8506fe14323a814b730f862441f64b8c448d89cfa9658d876913af3c8346bfa4209ce523e2e8fa349890e9329333bba10486b8147f8a338bd61e303b284768ce WHIRLPOOL bfaec16f964976432b0e9f6848f7add8890d6b344ef32ececf09902d11a99c7394a95064411d473da365376db55b75623daa31ff58525771da686bb06ba4957c
+EBUILD jack-audio-connection-kit-1.9.10.ebuild 2566 SHA256 68786c79d70b2718fbaf9ba35bad278a7db0ee62b207e6293c9792dfa3f8a39b SHA512 67eea37619a4140daf6f669cec705efb04eed12d86400b4c6817b8c5561aa740352d58e429b327af30efa8e06c140435fd96b23b0b6b703b6a4ac9918a60e409 WHIRLPOOL 685f6dd4d45057edadc23a6d3526736391fd9426f2cb92be2fb71ebb31544844bc622b2a30c86f2399e84f43e3e40372593c8fc49f10cdd39eeb81892f5fc0de
 EBUILD jack-audio-connection-kit-1.9999.ebuild 3570 SHA256 9e20b4b4a6d4ea89c579e63780a213900327a11b37fb18d082e17c6c5cb079fa SHA512 27e5ea763869df00558955901f979f7285ed2b930cd840a191b37ed9ef9b0c5903f9b3ac02bd1136899c004a1f17835980acb74c32553eb291a75edf8706e5d7 WHIRLPOOL 5f88d2e960712861de43fd0cdcf42d67b15cdc832cd829e753d12a57453b13a9028928caa525ffaf798f80c184eeab0f10717796d9b725d2cb17257d0fd8c961
-EBUILD jack-audio-connection-kit-2.9999.ebuild 2563 SHA256 74f9ba837d3bedc83303f7d92f47cade4b34ed83428556f6e6c8b721be6cb7c8 SHA512 8506fe14323a814b730f862441f64b8c448d89cfa9658d876913af3c8346bfa4209ce523e2e8fa349890e9329333bba10486b8147f8a338bd61e303b284768ce WHIRLPOOL bfaec16f964976432b0e9f6848f7add8890d6b344ef32ececf09902d11a99c7394a95064411d473da365376db55b75623daa31ff58525771da686bb06ba4957c
-MISC ChangeLog 17442 SHA256 bae03bb4873e0338fa04d9abfb17ea9951f28fcff184594b2c2c6cc9eba29902 SHA512 2f56360799869c2f07ce30c0529df53cb51600a5f4fc295bc1eacf6a17e0a8df0e2594afd870cbbe791314f774465b91ebb2748cc237ceed42af035a5007cc16 WHIRLPOOL 88493d5b9b2c7fed53014afe4907b30b53517cc20d9b694074e4cbb01c6552feac9ce5c4d5536b5da73bda38ba6e6b8d7df56e3da7530ea00d318e349a6c00ed
+EBUILD jack-audio-connection-kit-2.9999.ebuild 2815 SHA256 57d295ada3c9d30100938ee423b963ad2eb3e12957481cfb4d26c9101bad67de SHA512 ba75d996cf93a74e14cdfda9f1726f5dd3c06efc76473401c36a146fff2843cce0d25bc032104fade062b3691cbecb3dabe5d67167a70deba2d740a50870fb46 WHIRLPOOL 7d2b00b069da5940559dac5f9fc04a4acae551212be88d8318f91d5364d1a6a8654159de9f83dc7cc1b12810630f2bfa96c4cfa38d55bfb63e6d3694118e57e1
+MISC ChangeLog 17870 SHA256 811b0756daeb87834aca55de03d41f11d7342761a95b2a528202272b3e19be22 SHA512 55dc67ec713c6e0d68cd3f950acf13a5ccc9fbd256f05574ca69b9277527b2b1f2e1b27a78db85d1c848a6b977b110cd35e9e48a5bc03e2a81561fb5f5e4f475 WHIRLPOOL 6c19b378ba698635a4de80b4867e8f558dd26db8931e35cf96810aac6c52addaa9204d9e2948fc59cdfc080fc1af1955e1d80faf2ee4f33cce9e351c6543798a
 MISC metadata.xml 893 SHA256 ee04698dfbde7b9b1141f56e518821962ef104cd27b93d6e2b8efa73e458c563 SHA512 d0d867ab465bf31e4216eb5fdd7f7cf607cf61297bf8de8def0daebacb5d0ce9ca80fed56d9ba4c0bae6b8b157d39416746749e4257a39fc70d7a046e85e8b85 WHIRLPOOL 59b8dfc4436af903ca30b11f0a96439a6558283a589ba2a6eb78fa5749cef30cd8121cc4f5a383b73ef07a22fadd3d4987b33491d9d85398a073a271bda8b47b
