@@ -2,6 +2,16 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Apr 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  jack-audio-connection-kit-1.9.10.ebuild,
+  jack-audio-connection-kit-2.9999.ebuild:
+  remove debug use flag from jack2 since it only triggers CFLAGS
+  depend on expat when USE="dbus"
+  update 2.9999 ebuild to accomodate the upstream changes
+   added libsamplerate, readline and sndfile use flags
+   remove automagic deps
+   let the build system handle doxygen
+
 *jack-audio-connection-kit-0.124.1 (09 Apr 2015)
 
   09 Apr 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
